Added Infinispan Flag options for cache

--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -6,3 +6,7 @@ connector.class=com.github.oscerd.InfinispanSinkConnector
 infinispan.connection.hosts=127.0.0.1
 infinispan.connection.hotrod.port=11222
 infinispan.connection.cache.name=default
+infinispan.cache.force.return.values=true
+infinispan.cache.maxidle.default=false
+infinispan.cache.lifespan.default=false
+
