--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -1,7 +1,7 @@
 name=InfinispanSinkConnector
 topics=mytopic
 tasks.max=1
-connector.class=com.github.oscerd.InfinispanSinkConnector
+connector.class=com.github.oscerd.kafka.connect.infinispan.InfinispanSinkConnector
 
 infinispan.connection.hosts=127.0.0.1
 infinispan.connection.hotrod.port=11222
