--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>9.0.0.Final</version>
         </dependency>
         <dependency>
+            <groupId>org.infinispan.protostream</groupId>
+            <artifactId>protostream</artifactId>
+            <version>4.0.0.Final</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-api</artifactId>
             <version>${kafka.version}</version>
