--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,20 @@
     <properties>
         <kafka.version>0.10.2.0</kafka.version>
         <junit.version>4.12</junit.version>
+        <infinispan.version>9.0.0.Final</infinispan.version>
+        <infinispan.protostream.version>4.0.0.Final</infinispan.protostream.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-client-hotrod</artifactId>
-            <version>9.0.0.Final</version>
+            <version>${infinispan.version}</version>
         </dependency>
         <dependency>
             <groupId>org.infinispan.protostream</groupId>
             <artifactId>protostream</artifactId>
-            <version>4.0.0.Final</version>
+            <version>${infinispan.protostream.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
