Add the ProtoStreamMarshaller to Infinispan Configuration

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>${infinispan.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-remote-query-client</artifactId>
+            <version>${infinispan.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.infinispan.protostream</groupId>
             <artifactId>protostream</artifactId>
             <version>${infinispan.protostream.version}</version>
