Added support for Protobuf schema files and marshallers (at this point only one marshaller can be used)

--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -9,4 +9,7 @@ infinispan.connection.cache.name=default
 infinispan.cache.force.return.values=false
 infinispan.cache.maxidle.default=false
 infinispan.cache.lifespan.default=false
+infinispan.use.proto=false
+
+
 
