--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -6,7 +6,7 @@ connector.class=com.github.oscerd.kafka.connect.infinispan.InfinispanSinkConnect
 infinispan.connection.hosts=127.0.0.1
 infinispan.connection.hotrod.port=11222
 infinispan.connection.cache.name=default
-infinispan.cache.force.return.values=false
+infinispan.cache.force.return.values=true
 infinispan.cache.maxidle.default=false
 infinispan.cache.lifespan.default=false
 infinispan.use.proto=false
