--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -1,7 +1,9 @@
 name=InfinispanSinkConnector
-topics=mytopic
+topics=topic8
 tasks.max=1
 connector.class=com.github.oscerd.kafka.connect.infinispan.InfinispanSinkConnector
+key.converter=org.apache.kafka.connect.storage.StringConverter
+value.converter=org.apache.kafka.connect.storage.StringConverter
 
 infinispan.connection.hosts=127.0.0.1
 infinispan.connection.hotrod.port=11222
