Back to basic configuration

--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -1,5 +1,5 @@
 name=InfinispanSinkConnector
-topics=topic8
+topics=mytopic
 tasks.max=1
 connector.class=com.github.oscerd.kafka.connect.infinispan.InfinispanSinkConnector
 key.converter=org.apache.kafka.connect.storage.StringConverter
