Changed GroupId and Artifact name to reflect Infinispan organization

--- a/config/InfinispanSinkConnector.properties
+++ b/config/InfinispanSinkConnector.properties
@@ -1,7 +1,7 @@
 name=InfinispanSinkConnector
 topics=mytopic
 tasks.max=1
-connector.class=com.github.oscerd.kafka.connect.infinispan.InfinispanSinkConnector
+connector.class=org.infinispan.kafka.InfinispanSinkConnector
 key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.storage.StringConverter
 
