--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.oscerd</groupId>
-    <artifactId>kafka-connect-infinispan</artifactId>
+    <groupId>org.infinispan</groupId>
+    <artifactId>infinispan-kafka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>kafka-connect-infinispan</name>
+    <name>infinispan-kafka</name>
 
     <properties>
         <kafka.version>0.10.2.1</kafka.version>
