--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <scm>
+        <connection>scm:git:git@github.com:infinispan/infinispan-kafka.git</connection>
+        <developerConnection>scm:git:git@github.com:infinispan/infinispan-kafka.git</developerConnection>
+        <url>https://github.com/infinispan/infinispan-kafka</url>
+    </scm>
+
     <modules>
         <module>parent</module>
         <module>core</module>
