--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.infinispan.kafka</groupId>
     <artifactId>parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
     <name>Infinispan-Kafka Parent</name>
@@ -52,7 +51,7 @@
         <connection>scm:git:git@github.com:infinispan/infinispan-kafka.git</connection>
         <developerConnection>scm:git:git@github.com:infinispan/infinispan-kafka.git</developerConnection>
         <url>https://github.com/infinispan/infinispan-kafka</url>
-        <tag>HEAD</tag>
+        <tag>0.1</tag>
     </scm>
 
     <issueManagement>
