--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.infinispan.kafka</groupId>
         <artifactId>parent</artifactId>
-        <version>0.2</version>
+        <version>0.3-SNAPSHOT</version>
         <relativePath>parent/pom.xml</relativePath>
     </parent>
 
@@ -22,7 +22,7 @@
         <connection>scm:git:git@github.com:infinispan/infinispan-kafka.git</connection>
         <developerConnection>scm:git:git@github.com:infinispan/infinispan-kafka.git</developerConnection>
         <url>https://github.com/infinispan/infinispan-kafka</url>
-      <tag>0.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <modules>
