--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -107,6 +107,7 @@
         <version.maven.nexus-staging>1.6.7</version.maven.nexus-staging>
         <version.maven.buildhelper>1.12</version.maven.buildhelper>
         <version.maven.bundle>3.5.1</version.maven.bundle>
+        <version.maven.jar>3.1.0</version.maven.jar>
     </properties>
 
     <repositories>
