--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -108,6 +108,7 @@
         <version.maven.buildhelper>1.12</version.maven.buildhelper>
         <version.maven.bundle>3.5.1</version.maven.bundle>
         <version.maven.jar>3.1.0</version.maven.jar>
+        <version.maven.failsafe>2.22.1</version.maven.failsafe>
     </properties>
 
     <repositories>
