--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -99,7 +99,7 @@
         <log4j2.version>2.8.2</log4j2.version>
 
         <version.maven.compiler>3.8.1</version.maven.compiler>
-        <version.maven.surefire>2.22.2</version.maven.surefire>
+        <version.maven.surefire>3.0.0-M3</version.maven.surefire>
         <version.maven.javadoc>2.10.4</version.maven.javadoc>
         <version.maven.source>3.1.0</version.maven.source>
         <version.maven.resources>3.1.0</version.maven.resources>
