--- a/core/src/test/resources/log4j2.properties
+++ b/core/src/test/resources/log4j2.properties
@@ -26,3 +26,8 @@ appender.out.layout.type = PatternLayout
 appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
 rootLogger.level = INFO
 rootLogger.appenderRef.file.ref = file
+
+logger.infinispan.name = org.infinispan
+logger.infinispan.level = INFO
+logger.jgroups.name = org.jgroups
+logger.jgroups.level = INFO
