--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -96,7 +96,7 @@
         <infinispan.version>9.4.14.Final</infinispan.version>
         <infinispan.protostream.version>4.2.3.Final</infinispan.protostream.version>
         <jackson.version>2.9.9</jackson.version>
-        <log4j2.version>2.8.2</log4j2.version>
+        <log4j2.version>2.11.2</log4j2.version>
 
         <version.maven.compiler>3.8.1</version.maven.compiler>
         <version.maven.surefire>3.0.0-M3</version.maven.surefire>
@@ -213,6 +213,10 @@
                 <exclusion>
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-remote-query-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.karaf</groupId>
+                    <artifactId>apache-karaf</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
