--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -93,7 +93,7 @@
 
         <kafka.version>2.3.1</kafka.version>
         <junit.version>4.12</junit.version>
-        <infinispan.version>9.4.16.Final</infinispan.version>
+        <infinispan.version>10.0.0.CR3</infinispan.version>
         <infinispan.protostream.version>4.2.4.Final</infinispan.protostream.version>
         <jackson.version>2.10.0</jackson.version>
         <log4j2.version>2.12.1</log4j2.version>
@@ -188,10 +188,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.infinispan.server</groupId>
-            <artifactId>infinispan-server-testsuite</artifactId>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-server-runtime</artifactId>
             <version>${infinispan.version}</version>
-            <classifier>tests</classifier>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
