--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.infinispan.kafka</groupId>
     <artifactId>parent</artifactId>
-    <version>0.6</version>
+    <version>0.7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Infinispan-Kafka Parent</name>
@@ -51,7 +51,7 @@
         <connection>scm:git:https://github.com/infinispan/infinispan-kafka.git</connection>
         <developerConnection>scm:git:https://github.com/infinispan/infinispan-kafka.git</developerConnection>
         <url>https://github.com/infinispan/infinispan-kafka</url>
-        <tag>0.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
